Bug 139863 - Grantha consonants combining with Vedic svara markers are not displayed correctly
Summary: Grantha consonants combining with Vedic svara markers are not displayed corre...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.4.2 release
Hardware: All All
: medium normal
Assignee: Khaled Hosny
URL:
Whiteboard: target:7.6.0 target:7.5.5 target:24.2.0
Keywords:
Depends on:
Blocks: Font-Rendering CTL
  Show dependency treegraph
 
Reported: 2021-01-23 16:10 UTC by Shriramana Sharma
Modified: 2024-08-03 09:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
A real-world Grantha document using Vedic svara markers (23.24 KB, application/vnd.oasis.opendocument.text)
2021-01-23 16:11 UTC, Shriramana Sharma
Details
PDF showing how the previous attachment is displayed using LibO 7.0.4.2 (78.60 KB, application/pdf)
2021-01-23 16:13 UTC, Shriramana Sharma
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Shriramana Sharma 2021-01-23 16:10:37 UTC
Description:
Plain Grantha text is displayed well in LibreOffice AFAICS. But once I start using Vedic svara markers the base character to such markers is not displayed correctly.

This is a serious problem for the native user community since a significant percentage of daily users of Grantha are Vedic scholars who would like to display and print Grantha text with Vedic svara markers.

Steps to Reproduce:
Download and install the Noto Sans/Serif Grantha font from:

https://github.com/googlefonts/noto-fonts/blob/master/hinted/ttf/NotoSansGrantha/NotoSansGrantha-Regular.ttf
https://github.com/googlefonts/noto-fonts/blob/master/hinted/ttf/NotoSerifGrantha/NotoSerifGrantha-Regular.ttf

Open LibreOffice. Select the above font.

Input π‘Œ• (Grantha KA).
Input ΰ₯‘ (common Vedic svara marker for Indic encoded in the Devanagari block)


Actual Results:
The π‘Œ• is replaced by an empty box.

Expected Results:
The combination should be properly displayed.


Reproducible: Always


User Profile Reset: No



Additional Info:
In other cases the character preceding svara markers is displayed as a question mark within a diamond.
Comment 1 Shriramana Sharma 2021-01-23 16:11:18 UTC
Created attachment 169109 [details]
A real-world Grantha document using Vedic svara markers
Comment 2 Shriramana Sharma 2021-01-23 16:13:47 UTC
Created attachment 169110 [details]
PDF showing how the previous attachment is displayed using LibO 7.0.4.2
Comment 3 Shriramana Sharma 2021-02-11 12:21:33 UTC
Just wanted to note that this bug persists in latest LibO 7.1.0.3, and that the relevant characters are present in the font files linked above.

Elsewhere I have noted problems when glyphs for combining marks are *not* present in the same font, but this is happening despite the glyphs being present.
Comment 4 Roman Kuznetsov 2021-08-04 16:58:20 UTC
confirm in

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4677345e3695bac158bb04048b4d5c608ed764b4
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: default; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL
Comment 5 BogdanB 2023-05-12 20:30:37 UTC
Can you retest this bug?
Partially, it is better than the PDF. But not enough.

Retested with
Version: 7.5.3.2 (X86_64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 6 Khaled Hosny 2023-05-12 21:31:19 UTC
I suspect that the fact π‘Œ• (U+11305) is outside the basic multilingual plane (i.e. represented by a UTF-16 surrogate pair) has something to do with what is happening here. Looks like some code path is not handling surrogate pairs correctly.
Comment 7 Commit Notification 2023-05-28 16:22:31 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/98f7ec383db74a6491e925e30125d3fbf270afc2

tdf#139863, tdf#155514: Don’t split COMPLEX text portions

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 BogdanB 2023-05-28 18:06:46 UTC
Khaled, thanks for the fix. Shriramana, thanks for reporting the bug.
I checked and everything is fine in 7.6, but this is in alpha now.

LibreOffice 7.6 will be released Week 33, Aug 14, 2023 - Aug 20, 2023. Until then, you can download an alpha version of 7.6.

Verified with
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 3070091c9eafc964ebb3f53d3b44124b40571fd8
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 9 Commit Notification 2023-05-30 09:53:03 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/72835e8283f871e94c26049b06e813a804d2d04b

tdf#139863, tdf#155514: Don’t split COMPLEX text portions

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-06-14 14:06:11 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/adc69b98197637b738f18d9a51d248e305247126

tdf#139863: Add test

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.