tdf#139863, tdf#155514: Don’t split COMPLEX text portions

When a COMPLEX text portion contains more than one script, it gets split
into multiple portions. This is broken into more than one way:
* ScriptTypeDetector::endOfCTLScriptType() does not handle surrogate
  pairs, so it split the portion in the middle of a surrogate pair,
  causing tdf#139863.
* If a combing mark of a different COMPLEX script is used, it gets split
  into its own portion, causing tdf#155514

This was supposedly done to fix https://bz.apache.org/ooo/show_bug.cgi?id=28203,
but testing the documents from this bug report with this change does not
show recurrence of any of the kashida issue, so this split is unnecessary.

Change-Id: I9bd60efe3023b96ee74f861a5dc15a2229c27d79
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152354
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>